--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </a>
     </div>
     <script>
-        const titles = ["Goal Setting Tools", "That Drive Results!"];
+        const titles = ["Secret Sauce Manifesto!","Goal Setting Tools", "That Drive Results!"];
         let currentTitleIndex = 0;
 
         function changeTitle() {
